[project]
name = "locust_store"
version = "0.0.1"
description = "Testing locust for API load testing"
authors = [
    { name = "GDWR", email = "gregory.dwr@gmail.com" },
]
dependencies = [
    "fastapi>=0.95.2",
    "uvicorn>=0.22.0",
    "sqlmodel>=0.0.8",
    "psycopg2>=2.9.6",
]
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "locust>=2.32.1",
]

[tool.pdm.scripts]
dev = "uvicorn locust_store:app"
test = "locust"